--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Django==4.2
 djangorestframework==3.14
 django-cors-headers==4.3
-psycopg2-binary==2.9
+psycopg2-binary==2.9.9
 python-decouple==3.8
 Pillow==10.1
+python-dotenv==1.0.0
